--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
         <div class="reviews-header">
           <p>Comments</p>
         </div>
-        <div class="no-data" *ngIf="displayedNotifications.length==0">
+        <div class="no-data" *ngIf="displayedNotifications.length===0">
           <p>No reviews available</p>
         </div>
         <div *ngIf="reviews.length>0">
