--- a/src/app/components/menubar/menubar.component.scss
+++ b/src/app/components/menubar/menubar.component.scss
@@ -1,7 +1,7 @@
 .menubar {
   background-color: black; 
   height: 100vh; 
-  width: 16vw;
+  padding-top: 30px;
   overflow: hidden; 
   display: flex;
   flex-direction: column;
