--- a/src/app/components/view-suppliers/view-suppliers.component.html
+++ b/src/app/components/view-suppliers/view-suppliers.component.html
@@ -1,6 +1,6 @@
 <div class="supplier-panel">
   <div class="suppliers">
-    <h1>Suppleirs</h1>
+    <h1>Suppliers</h1>
     <button (click)="navigateToAddSuppliers()" *ngIf="isAdmin">Add Supplier</button>
     <div class="no-data">
       <p *ngIf="suppliers.length==0">No supplies exist</p>
