--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -171,7 +171,8 @@
 
       .notification {
         box-shadow: 0px 0px 3px 0px rgb(166, 166, 166);
-        width: 300px;
+        width: 90%;
+        margin: auto;
         margin-bottom: 10px;
         padding: 10px;
         transition: transform 0.2s ease-in-out;
