--- a/src/app/components/item/item.component.scss
+++ b/src/app/components/item/item.component.scss
@@ -58,6 +58,7 @@
       color: white;
       font-weight: bold;
       font-size: 1rem;
+      margin-bottom: 10px;
       &:hover{
         transform: scale(1.02);
       }
