--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -1,10 +1,62 @@
-.task{
-    display: flex; 
+
+
+.menubar {
+    width: 20%;
     height: 100%;
+    transition: transform 0.3s ease;
+    transform: translateX(-200%); /* Hidden by default */
 }
-.main-content{
+
+.menubar.open {
+    transform: translateX(0); /* Slide in */
+}
+
+.main-content {
     position: absolute;
     right: 0;
-    width: 84vw;
+    width: 85%;
     height: 100%;
+    padding-top: 50px;
+
 }
+
+@media (max-width: 768px) {
+    .menubar {
+        // display: none;
+        position: absolute;
+        z-index: 999; /* Ensure it appears above other content */
+        background-color: #f8f9fa;
+    }
+    .main-content{
+        width: 100%;  
+        display: flex; 
+        justify-content: center;
+    }
+
+
+
+    .menu-button {
+        display: block;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 1000;
+        background-color: #000000;
+        color: white;
+        border: none;
+        padding: 10px;
+        font-size: 1.2rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+}
+
+@media (min-width: 768px) {
+    .menu-button{
+        display: none;
+    }
+    .menubar{
+        transform: translateX(0%);
+    }
+}
+
